Knowrob/indigo/indigo-knowrob-dev/catkin_ws/logs/hm_marker_detection/build.make.018.log.stderr
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp: In member function 'void MarkerLocalizer::imageReceivedCallback(const ImageConstPtr&)':
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:101:27: error: invalid operands of types 'const char [26]' and 'const char [45]' to binary 'operator+'
                           "'http://knowrob.org/kb/knowrob.owl#Aruco', ["
                           ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:102:35: error: invalid types 'tf2Scalar {aka double}[int]' for array subscript
                           + q[0][0] + ","+ q[0][1] + ","+ q[0][2] + ","+q[0][3] + ","
                                   ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:102:50: error: invalid types 'tf2Scalar {aka double}[int]' for array subscript
                           + q[0][0] + ","+ q[0][1] + ","+ q[0][2] + ","+q[0][3] + ","
                                                  ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:102:65: error: invalid types 'tf2Scalar {aka double}[int]' for array subscript
                           + q[0][0] + ","+ q[0][1] + ","+ q[0][2] + ","+q[0][3] + ","
                                                                 ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:102:79: error: invalid types 'tf2Scalar {aka double}[int]' for array subscript
                           + q[0][0] + ","+ q[0][1] + ","+ q[0][2] + ","+q[0][3] + ","
                                                                               ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:103:35: error: invalid types 'tf2Scalar {aka double}[int]' for array subscript
                           + q[1][0] + ","+ q[1][1] + ","+ q[1][2] + ","+ q[1][3] + ","
                                   ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:103:50: error: invalid types 'tf2Scalar {aka double}[int]' for array subscript
                           + q[1][0] + ","+ q[1][1] + ","+ q[1][2] + ","+ q[1][3] + ","
                                                  ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:103:65: error: invalid types 'tf2Scalar {aka double}[int]' for array subscript
                           + q[1][0] + ","+ q[1][1] + ","+ q[1][2] + ","+ q[1][3] + ","
                                                                 ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:103:80: error: invalid types 'tf2Scalar {aka double}[int]' for array subscript
                           + q[1][0] + ","+ q[1][1] + ","+ q[1][2] + ","+ q[1][3] + ","
                                                                                ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:104:35: error: invalid types 'tf2Scalar {aka double}[int]' for array subscript
                           + q[2][0] + ","+ q[2][1] + ","+ q[2][2] + ","+ q[2][3] + ","
                                   ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:104:50: error: invalid types 'tf2Scalar {aka double}[int]' for array subscript
                           + q[2][0] + ","+ q[2][1] + ","+ q[2][2] + ","+ q[2][3] + ","
                                                  ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:104:65: error: invalid types 'tf2Scalar {aka double}[int]' for array subscript
                           + q[2][0] + ","+ q[2][1] + ","+ q[2][2] + ","+ q[2][3] + ","
                                                                 ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:104:80: error: invalid types 'tf2Scalar {aka double}[int]' for array subscript
                           + q[2][0] + ","+ q[2][1] + ","+ q[2][2] + ","+ q[2][3] + ","
                                                                                ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:105:35: error: invalid types 'tf2Scalar {aka double}[int]' for array subscript
                           + q[3][0] + ","+ q[3][1] + ","+ q[3][2] + ","+ q[3][3] +
                                   ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:105:50: error: invalid types 'tf2Scalar {aka double}[int]' for array subscript
                           + q[3][0] + ","+ q[3][1] + ","+ q[3][2] + ","+ q[3][3] +
                                                  ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:105:65: error: invalid types 'tf2Scalar {aka double}[int]' for array subscript
                           + q[3][0] + ","+ q[3][1] + ","+ q[3][2] + ","+ q[3][3] +
                                                                 ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/hm_marker_detection/src/MarkerLocalizer.cpp:105:80: error: invalid types 'tf2Scalar {aka double}[int]' for array subscript
                           + q[3][0] + ","+ q[3][1] + ","+ q[3][2] + ","+ q[3][3] +
                                                                                ^
make[2]: *** [CMakeFiles/marker_localizer.dir/src/MarkerLocalizer.cpp.o] Error 1
make[1]: *** [CMakeFiles/marker_localizer.dir/all] Error 2
make: *** [all] Error 2
